[package]
name = "wyduz"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.4", features = ["fltk-bundled"] }
fltk-theme = "0.7"
ureq = { version = "^2.8.0", features = ["json"] }

[dev-dependencies]
mockito = "^1.2.0"

[profile.release]
strip = true
lto = true
